tests/frontend/pass/logical_ops.vx
fn parser_logical_pass() -> Tensor<Bool> {
  let a = 1;
  let b = 2;
  let c = a < b;
  let d = a == b;
  let e = c && d;
  let f = c || !d;
  return f;
}
