tests/frontend/fail/invalid_tensor_init.vx
// RUN: vxc %s

fn main() -> i32 {
  // Assigning a boolean to a f32 Tensor should fail semantic analysis!
  let t_host: Tensor<f32> = true;
  return 0;
}

// EXPECT_FAIL: Type mismatch
